commit JSON color choose

--- a/Web App/client.html
+++ b/Web App/client.html
@@ -93,12 +93,42 @@
         console.log("Sending chosen color");
         colorWell = document.querySelector("#head");
         var topic = 'light/COLOR';
-        var message = colorWell.value;
+
+
+        var color=colorWell.value; // A nice shade of green.
+        var r = parseInt(color.substr(1,2), 16); // Grab the hex representation of red (chars 1-2) and convert to decimal (base 10).
+        var g = parseInt(color.substr(3,2), 16);
+        var b = parseInt(color.substr(5,2), 16);
+
+
+
+        var message = rgbToHsl(r,g,b);;
+
+
         client.publish(topic, message, { qos: 2 });
     });
 
 
+    function rgbToHsl(r, g, b){
+        r /= 255, g /= 255, b /= 255;
+        var max = Math.max(r, g, b), min = Math.min(r, g, b);
+        var h, s, l = (max + min) / 2;
 
+        if(max == min){
+            h = s = 0; // achromatic
+        }else{
+            var d = max - min;
+            s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
+            switch(max){
+                case r: h = (g - b) / d + (g < b ? 6 : 0); break;
+                case g: h = (b - r) / d + 2; break;
+                case b: h = (r - g) / d + 4; break;
+            }
+            h /= 6;
+        }
+
+        return "{\"hue\":"+Math.round(h*360*182.04)+", \"sat\":"+Math.round(s*255)+", \"bri\":"+Math.round(l*255)+"}";
+    }
 
   } );
 /*
