Added features to Web App 2

--- a/Web App/client.html
+++ b/Web App/client.html
@@ -185,7 +185,7 @@
   <p>Choose your lamp's color:</p>
   <div class="row">
     <div class="col-md-10">
-        <input type="color" id="head" name="head" value="#e66465"/>
+        <input type="color" id="head" name="head" value="#12ff00"/>
         <label for="head">Head</label>
         <input type="button" id="choose_color" value="Send color" />
     </div>
