--- a/Web App/client.html
+++ b/Web App/client.html
@@ -220,7 +220,9 @@
 <div class="hero__content">
 	
 
-  <h1 style="color:#f9f9f9;">Test WS mqtt.js</h1>
+  <h1 style="color:#f9f9f9;">Master of Lights</h1>
+
+  <h2 style="color:#f9f9f9;font-size:15px;"> Arthur Alcaraz, Mathieu Espagnol, Anthony Meranger, Arnaud Patra </h2>
 
   <div class = "a"> <p style="color:#f9f9f9;">Open the developer console to see the javascript console log messages, and edit the source file!</p> </div>
   <div class = "a"> <p style="color:#f9f9f9;">Switch</p> </div>
@@ -274,15 +276,15 @@
     <div id="first">
 <img src="https://cdn1.iconfinder.com/data/icons/education-vol-2/48/096-512.png" style="width: 20%;height: 15%;"
 alt="Brightness"> 
-<span id="LUMI"></span> </div>
+<span style="color:#f9f9f9;font-size:25px;" id="LUMI" ></span> </div>
     <div id="second">
     	<img src="https://cdn1.iconfinder.com/data/icons/complete-medical-healthcare-icons-for-apps-and-web/128/thermometer-512.png" style="width: 20%;height: 15%;"
     	alt="Temperature">
-    	<span id="TEMP"></span> </div>
+    	<span style="color:#f9f9f9;font-size:25px;" id="TEMP" ></span> </div>
     <div id="third">
     	<img src="https://image.flaticon.com/icons/png/512/514/514267.png" style="width: 20%;height: 12%;"
     	alt="Humidity">
-    	<span id="HMDT"></span></div>
+    	<span style="color:#f9f9f9;font-size:25px;" id="HMDT" ></span></div>
 </div>
 
 
